Criando a pagina de projetos

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="links">
         <a href="/">Sobre</a>
-        <a href="/">Projetos</a>
+        <a href="/projetos">Projetos</a>
       </div>
     </header>
 
